@@ -1,7 +1,7 @@
 package org.cryptomator.jfuse.mac;
 
-import org.cryptomator.jfuse.api.FuseOperations;
 import org.cryptomator.jfuse.api.FuseMountFailedException;
+import org.cryptomator.jfuse.api.FuseOperations;
 import org.cryptomator.jfuse.api.TimeSpec;
 import org.cryptomator.jfuse.mac.extr.fuse_file_info;
 import org.cryptomator.jfuse.mac.extr.fuse_h;
@@ -18,9 +18,8 @@ import org.junit.jupiter.params.provider.CsvSource;
 import org.mockito.MockedStatic;
 import org.mockito.Mockito;
 
-import java.lang.foreign.MemoryAddress;
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
 import java.lang.foreign.ValueLayout;
 import java.time.Instant;
 import java.util.List;
@@ -54,8 +53,8 @@ public class FuseImplTest {
 		@Test
 		@DisplayName("MountFailedException when fuse_new fails")
 		public void testFuseNewFails() {
-			fuseH.when(() -> fuse_h.fuse_mount(Mockito.any(), Mockito.any())).thenReturn(MemoryAddress.ofLong(42L));
-			fuseH.when(() -> fuse_h.fuse_new(Mockito.any(), Mockito.any(), Mockito.any(), Mockito.anyLong(), Mockito.any())).thenReturn(MemoryAddress.NULL);
+			fuseH.when(() -> fuse_h.fuse_mount(Mockito.any(), Mockito.any())).thenReturn(MemorySegment.ofAddress(42L));
+			fuseH.when(() -> fuse_h.fuse_new(Mockito.any(), Mockito.any(), Mockito.any(), Mockito.anyLong(), Mockito.any())).thenReturn(MemorySegment.NULL);
 
 			var thrown = Assertions.assertThrows(FuseMountFailedException.class, () -> fuseImplSpy.mount(args));
 
@@ -66,7 +65,7 @@ public class FuseImplTest {
 		@Test
 		@DisplayName("MountFailedException when fuse_mount fails")
 		public void testFuseMountFails() {
-			fuseH.when(() -> fuse_h.fuse_mount(Mockito.any(), Mockito.any())).thenReturn(MemoryAddress.NULL);
+			fuseH.when(() -> fuse_h.fuse_mount(Mockito.any(), Mockito.any())).thenReturn(MemorySegment.NULL);
 
 			var thrown = Assertions.assertThrows(FuseMountFailedException.class, () -> fuseImplSpy.mount(args));
 
@@ -80,12 +79,12 @@ public class FuseImplTest {
 	@DisplayName("parseArgs")
 	public void testParseArgs() {
 		try (var fuseH = Mockito.mockStatic(fuse_h.class);
-			var scope = MemorySession.openConfined()) {
+			var arena = Arena.openConfined()) {
 			fuseH.when(() -> fuse_h.fuse_parse_cmdline(Mockito.any(), Mockito.any(), Mockito.any(), Mockito.any())).then(invocation -> {
 				MemorySegment mp = invocation.getArgument(1);
 				MemorySegment mt = invocation.getArgument(2);
 				MemorySegment fg = invocation.getArgument(3);
-				mp.set(ValueLayout.ADDRESS, 0L, scope.allocateUtf8String("/mount/point"));
+				mp.set(ValueLayout.ADDRESS, 0L, arena.allocateUtf8String("/mount/point"));
 				mt.set(JAVA_INT, 0L, 1);
 				fg.set(JAVA_INT, 0L, 1);
 				return 0;
@@ -108,12 +107,12 @@ public class FuseImplTest {
 		@Test
 		@DisplayName("flush(\"/foo\", fi)")
 		public void testFlush() {
-			try (var scope = MemorySession.openConfined()) {
-				var path = scope.allocateUtf8String("/foo");
-				var fi = fuse_file_info.allocate(scope);
+			try (var arena = Arena.openConfined()) {
+				var path = arena.allocateUtf8String("/foo");
+				var fi = fuse_file_info.allocate(arena);
 				Mockito.doReturn(42).when(fuseOps).flush(Mockito.eq("/foo"), Mockito.any());
 
-				var result = fuseImpl.flush(path.address(), fi.address());
+				var result = fuseImpl.flush(path, fi);
 
 				Assertions.assertEquals(42, result);
 			}
@@ -122,12 +121,12 @@ public class FuseImplTest {
 		@Test
 		@DisplayName("fsync(\"/foo\", 1, fi)")
 		public void testFsync() {
-			try (var scope = MemorySession.openConfined()) {
-				var path = scope.allocateUtf8String("/foo");
-				var fi = fuse_file_info.allocate(scope);
+			try (var arena = Arena.openConfined()) {
+				var path = arena.allocateUtf8String("/foo");
+				var fi = fuse_file_info.allocate(arena);
 				Mockito.doReturn(42).when(fuseOps).fsync(Mockito.eq("/foo"), Mockito.eq(1), Mockito.any());
 
-				var result = fuseImpl.fsync(path.address(), 1, fi.address());
+				var result = fuseImpl.fsync(path, 1, fi);
 
 				Assertions.assertEquals(42, result);
 			}
@@ -136,12 +135,12 @@ public class FuseImplTest {
 		@Test
 		@DisplayName("fsyncdir(\"/foo\", 1, fi)")
 		public void testFsyncdir() {
-			try (var scope = MemorySession.openConfined()) {
-				var path = scope.allocateUtf8String("/foo");
-				var fi = fuse_file_info.allocate(scope);
+			try (var arena = Arena.openConfined()) {
+				var path = arena.allocateUtf8String("/foo");
+				var fi = fuse_file_info.allocate(arena);
 				Mockito.doReturn(42).when(fuseOps).fsyncdir(Mockito.eq("/foo"), Mockito.eq(1), Mockito.any());
 
-				var result = fuseImpl.fsyncdir(path.address(), 1, fi.address());
+				var result = fuseImpl.fsyncdir(path, 1, fi);
 
 				Assertions.assertEquals(42, result);
 			}
@@ -156,12 +155,12 @@ public class FuseImplTest {
 		@DisplayName("utimens(\"/foo\", UTIME_NOW, UTIME_NOW)")
 		@Test
 		public void testUtimensNow() {
-			try (var scope = MemorySession.openConfined()) {
-				var path = scope.allocateUtf8String("/foo");
-				var times = MemoryAddress.NULL;
+			try (var arena = Arena.openConfined()) {
+				var path = arena.allocateUtf8String("/foo");
+				var times = MemorySegment.NULL;
 				Mockito.doReturn(42).when(fuseOps).utimens(Mockito.eq("/foo"), Mockito.argThat(TimeSpec::isUtimeNow), Mockito.argThat(TimeSpec::isUtimeNow), Mockito.isNull());
 
-				var result = fuseImpl.utimens(path.address(), times);
+				var result = fuseImpl.utimens(path, times);
 
 				Assertions.assertEquals(42, result);
 			}
@@ -176,16 +175,16 @@ public class FuseImplTest {
 		public void testUtimens(long sec0, long nsec0, long sec1, long nsec1) {
 			Instant expectedATime = Instant.ofEpochSecond(sec0, nsec0);
 			Instant expectedMTime = Instant.ofEpochSecond(sec1, nsec1);
-			try (var scope = MemorySession.openConfined()) {
-				var path = scope.allocateUtf8String("/foo");
-				var times = timespec.allocateArray(2, scope);
+			try (var arena = Arena.openConfined()) {
+				var path = arena.allocateUtf8String("/foo");
+				var times = timespec.allocateArray(2, arena);
 				timespec.tv_sec$set(times, 0, sec0);
 				timespec.tv_nsec$set(times, 0, nsec0);
 				timespec.tv_sec$set(times, 1, sec1);
 				timespec.tv_nsec$set(times, 1, nsec1);
 				Mockito.doReturn(42).when(fuseOps).utimens(Mockito.eq("/foo"), Mockito.argThat(t -> expectedATime.equals(t.get())), Mockito.argThat(t -> expectedMTime.equals(t.get())), Mockito.isNull());
 
-				var result = fuseImpl.utimens(path.address(), times.address());
+				var result = fuseImpl.utimens(path, times);
 
 				Assertions.assertEquals(42, result);
 			}
@@ -199,12 +198,12 @@ public class FuseImplTest {
 		@Test
 		@DisplayName("getattr")
 		public void testGetattr() {
-			try (var scope = MemorySession.openConfined()) {
-				var path = scope.allocateUtf8String("/foo");
-				var attr = stat.allocate(scope);
+			try (var arena = Arena.openConfined()) {
+				var path = arena.allocateUtf8String("/foo");
+				var attr = stat.allocate(arena);
 				Mockito.doReturn(42).when(fuseOps).getattr(Mockito.eq("/foo"), Mockito.any(), Mockito.isNull());
 
-				var result = fuseImpl.getattr(path.address(), attr.address());
+				var result = fuseImpl.getattr(path, attr);
 
 				Assertions.assertEquals(42, result);
 			}
@@ -213,13 +212,13 @@ public class FuseImplTest {
 		@Test
 		@DisplayName("fgetattr")
 		public void testFgetattr() {
-			try (var scope = MemorySession.openConfined()) {
-				var path = scope.allocateUtf8String("/foo");
-				var attr = stat.allocate(scope);
-				var fi = fuse_file_info.allocate(scope);
+			try (var arena = Arena.openConfined()) {
+				var path = arena.allocateUtf8String("/foo");
+				var attr = stat.allocate(arena);
+				var fi = fuse_file_info.allocate(arena);
 				Mockito.doReturn(42).when(fuseOps).getattr(Mockito.eq("/foo"), Mockito.any(), Mockito.notNull());
 
-				var result = fuseImpl.fgetattr(path.address(), attr.address(), fi.address());
+				var result = fuseImpl.fgetattr(path, attr, fi);
 
 				Assertions.assertEquals(42, result);
 			}
@@ -228,14 +227,14 @@ public class FuseImplTest {
 		@Test
 		@DisplayName("getxattr")
 		public void testGetxattr() {
-			try (var scope = MemorySession.openConfined()) {
-				var path = scope.allocateUtf8String("/foo");
-				var name = scope.allocateUtf8String("bar");
-				var value = scope.allocate(100);
+			try (var arena = Arena.openConfined()) {
+				var path = arena.allocateUtf8String("/foo");
+				var name = arena.allocateUtf8String("bar");
+				var value = arena.allocate(100);
 
 				Mockito.doReturn(42).when(fuseOps).getxattr(Mockito.eq("/foo"), Mockito.eq("bar"), Mockito.any());
 
-				var result = fuseImpl.getxattr(path.address(), name.address(), value.address(), 100);
+				var result = fuseImpl.getxattr(path, name, value, 100);
 
 				Assertions.assertEquals(42, result);
 			}
@@ -244,14 +243,14 @@ public class FuseImplTest {
 		@Test
 		@DisplayName("setxattr")
 		public void testSetxattr() {
-			try (var scope = MemorySession.openConfined()) {
-				var path = scope.allocateUtf8String("/foo");
-				var name = scope.allocateUtf8String("bar");
-				var value = scope.allocate(100);
+			try (var arena = Arena.openConfined()) {
+				var path = arena.allocateUtf8String("/foo");
+				var name = arena.allocateUtf8String("bar");
+				var value = arena.allocate(100);
 
 				Mockito.doReturn(42).when(fuseOps).setxattr(Mockito.eq("/foo"), Mockito.eq("bar"), Mockito.any(), Mockito.anyInt());
 
-				var result = fuseImpl.setxattr(path.address(), name.address(), value.address(), 100, 0xDEADBEEF);
+				var result = fuseImpl.setxattr(path, name, value, 100, 0xDEADBEEF);
 
 				Assertions.assertEquals(42, result);
 			}
@@ -260,13 +259,13 @@ public class FuseImplTest {
 		@Test
 		@DisplayName("listxattr")
 		public void testListxattr() {
-			try (var scope = MemorySession.openConfined()) {
-				var path = scope.allocateUtf8String("/foo");
-				var list = scope.allocate(100);
+			try (var arena = Arena.openConfined()) {
+				var path = arena.allocateUtf8String("/foo");
+				var list = arena.allocate(100);
 
 				Mockito.doReturn(42).when(fuseOps).listxattr(Mockito.eq("/foo"), Mockito.any());
 
-				var result = fuseImpl.listxattr(path.address(), list.address(), 100);
+				var result = fuseImpl.listxattr(path, list, 100);
 
 				Assertions.assertEquals(42, result);
 			}
@@ -275,13 +274,13 @@ public class FuseImplTest {
 		@Test
 		@DisplayName("removexattr")
 		public void testRemovexattr() {
-			try (var scope = MemorySession.openConfined()) {
-				var path = scope.allocateUtf8String("/foo");
-				var name = scope.allocateUtf8String("bar");
+			try (var arena = Arena.openConfined()) {
+				var path = arena.allocateUtf8String("/foo");
+				var name = arena.allocateUtf8String("bar");
 
 				Mockito.doReturn(42).when(fuseOps).removexattr(Mockito.eq("/foo"), Mockito.eq("bar"));
 
-				var result = fuseImpl.removexattr(path.address(), name.address());
+				var result = fuseImpl.removexattr(path, name);
 
 				Assertions.assertEquals(42, result);
 			}
@@ -296,11 +295,11 @@ public class FuseImplTest {
 		@Test
 		@DisplayName("truncate")
 		public void testTruncate() {
-			try (var scope = MemorySession.openConfined()) {
-				var path = scope.allocateUtf8String("/foo");
+			try (var arena = Arena.openConfined()) {
+				var path = arena.allocateUtf8String("/foo");
 				Mockito.doReturn(42).when(fuseOps).truncate(Mockito.eq("/foo"), Mockito.eq(1337L), Mockito.isNull());
 
-				var result = fuseImpl.truncate(path.address(), 1337L);
+				var result = fuseImpl.truncate(path, 1337L);
 
 				Assertions.assertEquals(42, result);
 			}
@@ -309,12 +308,12 @@ public class FuseImplTest {
 		@Test
 		@DisplayName("ftruncate")
 		public void testFtruncate() {
-			try (var scope = MemorySession.openConfined()) {
-				var path = scope.allocateUtf8String("/foo");
-				var fi = fuse_file_info.allocate(scope);
+			try (var arena = Arena.openConfined()) {
+				var path = arena.allocateUtf8String("/foo");
+				var fi = fuse_file_info.allocate(arena);
 				Mockito.doReturn(42).when(fuseOps).truncate(Mockito.eq("/foo"), Mockito.eq(1337L), Mockito.notNull());
 
-				var result = fuseImpl.ftruncate(path.address(), 1337L, fi.address());
+				var result = fuseImpl.ftruncate(path, 1337L, fi);
 
 				Assertions.assertEquals(42, result);
 			}
@@ -325,11 +324,11 @@ public class FuseImplTest {
 	@Test
 	@DisplayName("chown")
 	public void testChown() {
-		try (var scope = MemorySession.openConfined()) {
-			var path = scope.allocateUtf8String("/foo");
+		try (var arena = Arena.openConfined()) {
+			var path = arena.allocateUtf8String("/foo");
 			Mockito.doReturn(42).when(fuseOps).chown("/foo", 42, 1337, null);
 
-			var result = fuseImpl.chown(path.address(), 42, 1337);
+			var result = fuseImpl.chown(path, 42, 1337);
 
 			Assertions.assertEquals(42, result);
 		}
