@@ -5,21 +5,21 @@ import org.cryptomator.jfuse.api.Stat;
 import org.cryptomator.jfuse.win.extr.fuse3_fill_dir_t;
 import org.cryptomator.jfuse.win.extr.fuse_stat;
 
-import java.lang.foreign.MemoryAddress;
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.Arena;
+import java.lang.foreign.MemorySegment;
 import java.util.function.Consumer;
 
-record DirFillerImpl(MemoryAddress buf, fuse3_fill_dir_t callback, MemorySession scope) implements DirFiller {
+record DirFillerImpl(MemorySegment buf, fuse3_fill_dir_t callback, Arena arena) implements DirFiller {
 
-	DirFillerImpl(MemoryAddress buf, MemoryAddress callback, MemorySession scope) {
-		this(buf, fuse3_fill_dir_t.ofAddress(callback, scope), scope);
+	DirFillerImpl(MemorySegment buf, MemorySegment callback, Arena arena) {
+		this(buf, fuse3_fill_dir_t.ofAddress(callback, arena.scope()), arena);
 	}
 
 	@Override
 	public int fill(String name, Consumer<Stat> statFiller, long offset, int flags) {
-		var statSegment = fuse_stat.allocate(scope);
+		var statSegment = fuse_stat.allocate(arena);
 		statFiller.accept(new StatImpl(statSegment));
-		return callback.apply(buf, scope.allocateUtf8String(name).address(), statSegment.address(), offset, flags);
+		return callback.apply(buf, arena.allocateUtf8String(name), statSegment, offset, flags);
 	}
 
 }
